--- a/helper/topic_words_to_latex.ipynb
+++ b/helper/topic_words_to_latex.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook to create a table in latex format for a specified test run"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,366 +18,17 @@
     "os.chdir(\"..\")\n",
     "\n",
     "chatbot = 'roberta'\n",
-    "model = 'BERTOPIC'\n",
-    "run = 'BERTOPIC_roberta_v20'\n",
-    "\n",
+    "model = 'TOP2VEC'\n",
+    "run = 'TOP2VEC_roberta_v37'\n",
     "\n",
     "path = os.path.join('output', chatbot, model, run, 'topics.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Topic</th>\n",
-       "      <th>Topic words</th>\n",
-       "      <th>Message count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>zwei, blum, rückvergütung, andrea, zollinger</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>ihnen, ja, morgen, unserem, stromnetz</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>akonto, ebill, anapssen, ceo, vorname</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>kundennummer, kundenkonto, seien, anlagenummer...</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>anschlussgesuch, ausserhalb, totesfall, störun...</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>energieform, baklonkraftwerk, malus, besitzt, ...</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>netto, albrow, basis, man, sehe</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>login, sassine, patrick, fritschi, matti</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>offerte, aufnahme, lastschrift, kunummer, jedoch</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>wechseln, karriere, abo, umgezogen, rückspeise...</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>kostet, chf, kwh, km, jahr</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>eigenstrom, meter, messung, messing,</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>tarifsammlung, preise, objekts, ladesäule, jah...</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>ändern, versand, stromtarif, adressänderung, v...</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>tarife, tariffe, unbekannt, halbstrom, bisherige</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>teilzahlung, ratenzahlung, zahlungsfrist, dire...</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>16</td>\n",
-       "      <td>mixstrom, naturstrom, basic, ekz, was</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>17</td>\n",
-       "      <td>tarrife, tarrif, sind, was, ist</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>stromverbaruach, stromtarive, projekt, neubau,...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19</td>\n",
-       "      <td>überbauung, leider, eigentümer, eigenes, durch...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>20</td>\n",
-       "      <td>stromspartipps, sparen, brauche, stromverbrauc...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>21</td>\n",
-       "      <td>stomverträge, produktion, tarif, ,</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>22</td>\n",
-       "      <td>thema, verbrauchstelle, details, verbrauch,</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>23</td>\n",
-       "      <td>photovoltaik, stecker, betreffend, beiden, resp</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>24</td>\n",
-       "      <td>lastmessung, lastgangmessung, lastgangdaten, j...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>vorperiode, quartal, momentaner, warum, verstehe</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>26</td>\n",
-       "      <td>inselbetrieb, person, dunkel, egg, anderen</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>27</td>\n",
-       "      <td>solar, solaranlage, , ,</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>28</td>\n",
-       "      <td>wärmepumpe, gemeldet, heatpump, techniker, aktiv</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>29</td>\n",
-       "      <td>kündigen, wollen, gekündigt, kündigung, ladest...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>30</td>\n",
-       "      <td>mahnung, link, laden, zur, geht</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>31</td>\n",
-       "      <td>niedrigtarif, emobilität, beratung, autoladest...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>32</td>\n",
-       "      <td>problem, daten, sonst, browser, neue</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>33</td>\n",
-       "      <td>defekt, myekz, portal, ,</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>34</td>\n",
-       "      <td>anmelden, abbruch, registrieren, neu, anmeldung</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>35</td>\n",
-       "      <td>lade, jahren, augen, internet, schrift</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>36</td>\n",
-       "      <td>neukundenummer, messpunktnummer, nummer, iban,</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>37</td>\n",
-       "      <td>solarstrom, solaranlag, lange, kündigungsfrist...</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>38</td>\n",
-       "      <td>eigenstromx, was, eigenstrom, ist,</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>39</td>\n",
-       "      <td>schweizer, kredit, land, schließen, bankkonto</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>40</td>\n",
-       "      <td>ckw, pv, zuzuweisen, sagt, verfolgen</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>41</td>\n",
-       "      <td>stoerung, einspeise, mahnung, ,</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>42</td>\n",
-       "      <td>tarifs, wechsel, tariffe, jahr, des</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>43</td>\n",
-       "      <td>rückliefertarife, freie, stellen, ,</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Topic                                        Topic words  Message count\n",
-       "0       0       zwei, blum, rückvergütung, andrea, zollinger             17\n",
-       "1       1              ihnen, ja, morgen, unserem, stromnetz             12\n",
-       "2       2              akonto, ebill, anapssen, ceo, vorname             12\n",
-       "3       3  kundennummer, kundenkonto, seien, anlagenummer...             12\n",
-       "4       4  anschlussgesuch, ausserhalb, totesfall, störun...             10\n",
-       "5       5  energieform, baklonkraftwerk, malus, besitzt, ...             10\n",
-       "6       6                    netto, albrow, basis, man, sehe             10\n",
-       "7       7           login, sassine, patrick, fritschi, matti              8\n",
-       "8       8   offerte, aufnahme, lastschrift, kunummer, jedoch              8\n",
-       "9       9  wechseln, karriere, abo, umgezogen, rückspeise...              8\n",
-       "10     10                         kostet, chf, kwh, km, jahr              7\n",
-       "11     11              eigenstrom, meter, messung, messing,               6\n",
-       "12     12  tarifsammlung, preise, objekts, ladesäule, jah...              6\n",
-       "13     13  ändern, versand, stromtarif, adressänderung, v...              6\n",
-       "14     14   tarife, tariffe, unbekannt, halbstrom, bisherige              5\n",
-       "15     15  teilzahlung, ratenzahlung, zahlungsfrist, dire...              5\n",
-       "16     16              mixstrom, naturstrom, basic, ekz, was              4\n",
-       "17     17                    tarrife, tarrif, sind, was, ist              4\n",
-       "18     18  stromverbaruach, stromtarive, projekt, neubau,...              4\n",
-       "19     19  überbauung, leider, eigentümer, eigenes, durch...              4\n",
-       "20     20  stromspartipps, sparen, brauche, stromverbrauc...              4\n",
-       "21     21                stomverträge, produktion, tarif, ,               4\n",
-       "22     22       thema, verbrauchstelle, details, verbrauch,               4\n",
-       "23     23    photovoltaik, stecker, betreffend, beiden, resp              4\n",
-       "24     24  lastmessung, lastgangmessung, lastgangdaten, j...              4\n",
-       "25     25   vorperiode, quartal, momentaner, warum, verstehe              4\n",
-       "26     26         inselbetrieb, person, dunkel, egg, anderen              4\n",
-       "27     27                           solar, solaranlage, , ,               4\n",
-       "28     28   wärmepumpe, gemeldet, heatpump, techniker, aktiv              4\n",
-       "29     29  kündigen, wollen, gekündigt, kündigung, ladest...              4\n",
-       "30     30                    mahnung, link, laden, zur, geht              4\n",
-       "31     31  niedrigtarif, emobilität, beratung, autoladest...              4\n",
-       "32     32               problem, daten, sonst, browser, neue              4\n",
-       "33     33                          defekt, myekz, portal, ,               4\n",
-       "34     34    anmelden, abbruch, registrieren, neu, anmeldung              3\n",
-       "35     35             lade, jahren, augen, internet, schrift              3\n",
-       "36     36    neukundenummer, messpunktnummer, nummer, iban,               3\n",
-       "37     37  solarstrom, solaranlag, lange, kündigungsfrist...              3\n",
-       "38     38                eigenstromx, was, eigenstrom, ist,               3\n",
-       "39     39      schweizer, kredit, land, schließen, bankkonto              3\n",
-       "40     40               ckw, pv, zuzuweisen, sagt, verfolgen              3\n",
-       "41     41                   stoerung, einspeise, mahnung, ,               2\n",
-       "42     42                tarifs, wechsel, tariffe, jahr, des              2\n",
-       "43     43               rückliefertarife, freie, stellen, ,               0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_excel(path)\n",
     "df"
@@ -378,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
